fix: error-page-wrapper property align-content wrongly set to middle

--- a/src/styles/partials/content.sass
+++ b/src/styles/partials/content.sass
@@ -31,4 +31,4 @@
     #error-page-wrapper
         display: grid
         justify-content: center
-        align-content: middle
+        align-content: space-around
